# crewai-with-powerapi

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile copy  Dockerfile copy 2  README.md  docker-compose.yaml  logs.txt  pyproject.toml  report.md  requirements.txt
app/output/: report.md
src/crewtest/: crew.py  main.py
